--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/gallery.css">
 </head>
 
 <body>
@@ -96,27 +97,10 @@
 				</div>
 				<div class="col-lg-7 col-md-6 col-sm-8 header-right">
 					<div class="owl-carousel owl-banner">
-						<img class="img-fluid w-100" src="img/home-banner-img.jpg" alt="">
-						<img class="img-fluid w-100" src="img/home-banner-img.jpg" alt="">
-					</div>
-					<div class="form-wrap">
-						<p class="mb-20 text-white">Enter Monthly Donation Amount</p>
-						<form class="form" role="form" autocomplete="off">
-							<div class="row">
-								<div class="col-md-7 wrap-left donation-input">
-									<div class="form-group">
-										<input type="text" placeholder="125.00" onfocus="this.placeholder = ''"
-											onblur="this.placeholder = '125.00'" class="form-control">
-										<span class="fs-14">USD</span>
-									</div>
-								</div>
-								<div class="col-md-5 wrap-right">
-									<div class="input-group dates-wrap">
-										<button type="submit" class="primary-btn white">Donate Now</button>
-									</div>
-								</div>
-							</div>
-						</form>
+						<img class="img-fluid w-100" src="img/childrensHome/home1.jpg" alt="">
+						<img class="img-fluid w-100" src="img/foodProg/food2.jpg" alt="">
+						<img class="img-fluid w-100" src="img/home/home1.jpg" alt="">
+						<img class="img-fluid w-100" src="img/missionSchool/home1.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -138,45 +122,19 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-4 col-md-6">
+				<div class="col-lg-3 col-md-6">
 					<div class="single-cause">
 						<div class="top">
 							<div class="thumb">
-								<img class="c-img img-fluid" src="img/causes/c1.jpg" alt="">
+								<img class="c-img img-fluid" src="img/foodProg/food1.jpg" alt="">
 							</div>
 							<a href="#">
-								<h3>Help Restoring Uganda’s Water
-									Pipelines Construction</h3>
+								<h3>Food Programme</h3>
 							</a>
 							<p class="text">
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher
-								conduct especially
-								workplace.
+								Ananda Marga Mission distributes food each week to vulnerable
+								members of the community. It also involves feeding thousands of children each week.
 							</p>
-						</div>
-						<div class="middle">
-							<div class="skill_main">
-								<div class="skill_item">
-									<div class="progress">
-										<div class="progress-bar progress-bar1" role="progressbar" aria-valuenow="75"
-											aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-							</div>
-							<div class="d-flex">
-								<div class="mr-50">
-									<h5><span class="counter">76</span>%</h5>
-									<p>Funded</p>
-								</div>
-								<div class="mr-50">
-									<h5>$<span class="counter">7,689</span></h5>
-									<p>Pledged</p>
-								</div>
-								<div class="">
-									<h5><span class="counter">29</span></h5>
-									<p>Days Remaining</p>
-								</div>
-							</div>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 							<a href="#" class="primary-btn offwhite">View Details</a>
@@ -185,45 +143,18 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4 col-md-6">
+				<div class="col-lg-3 col-md-6">
 					<div class="single-cause">
 						<div class="top">
 							<div class="thumb">
-								<img class="c-img img-fluid" src="img/causes/c2.jpg" alt="">
+								<img class="c-img img-fluid" src="img/childrensHome/home3.jpg" alt="">
 							</div>
 							<a href="#">
-								<h3>Help Restoring Uganda’s Water
-									Pipelines Construction</h3>
+								<h3>Childrens Home</h3>
 							</a>
 							<p class="text">
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher
-								conduct especially
-								workplace.
+								Ananda Marga Mission provides homes for homeless children both in Mombasa and Nairobi.
 							</p>
-						</div>
-						<div class="middle">
-							<div class="skill_main">
-								<div class="skill_item">
-									<div class="progress">
-										<div class="progress-bar progress-bar2" role="progressbar" aria-valuenow="75"
-											aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
-							</div>
-							<div class="d-flex">
-								<div class="mr-50">
-									<h5><span class="counter">76</span>%</h5>
-									<p>Funded</p>
-								</div>
-								<div class="mr-50">
-									<h5>$<span class="counter">7,689</span></h5>
-									<p>Pledged</p>
-								</div>
-								<div class="">
-									<h5><span class="counter">29</span></h5>
-									<p>Days Remaining</p>
-								</div>
-							</div>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 							<a href="#" class="primary-btn offwhite">View Details</a>
@@ -232,45 +163,40 @@
 					</div>
 				</div>
 
-				<div class="col-lg-4 col-md-6">
+				<div class="col-lg-3 col-md-6">
 					<div class="single-cause">
 						<div class="top">
 							<div class="thumb">
-								<img class="c-img img-fluid" src="img/causes/c3.jpg" alt="">
+								<img class="c-img img-fluid" src="img/missionSchool/home3.jpg" alt="">
 							</div>
 							<a href="#">
-								<h3>Help Restoring Uganda’s Water
-									Pipelines Construction</h3>
+								<h3>Mission School</h3>
 							</a>
 							<p class="text">
-								inappropriate behavior is often laughed off as “boys will be boys,” women face higher
-								conduct especially
-								workplace.
+								Ananda Marga Mission provides free education to thousands of students across the
+								country. The students also get to enjoy free food. The
+								Mission also provides schools for those living with disabilities.
 							</p>
 						</div>
-						<div class="middle">
-							<div class="skill_main">
-								<div class="skill_item">
-									<div class="progress">
-										<div class="progress-bar progress-bar3" role="progressbar" aria-valuenow="75"
-											aria-valuemin="0" aria-valuemax="100"></div>
-									</div>
-								</div>
+						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+							<a href="#" class="primary-btn offwhite">View Details</a>
+							<a href="#" class="primary-btn primary-btn3">Donate Here</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6">
+					<div class="single-cause">
+						<div class="top">
+							<div class="thumb">
+								<img class="c-img img-fluid" src="img/home/home1.jpg" alt="">
 							</div>
-							<div class="d-flex">
-								<div class="mr-50">
-									<h5><span class="counter">76</span>%</h5>
-									<p>Funded</p>
-								</div>
-								<div class="mr-50">
-									<h5>$<span class="counter">7,689</span></h5>
-									<p>Pledged</p>
-								</div>
-								<div class="">
-									<h5><span class="counter">29</span></h5>
-									<p>Days Remaining</p>
-								</div>
-							</div>
+							<a href="#">
+								<h3>Health Programme</h3>
+							</a>
+							<p class="text">
+								The Mission has a health center to care for children living ith HIV/AIDS.
+							</p>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 							<a href="#" class="primary-btn offwhite">View Details</a>
@@ -283,234 +209,76 @@
 	</section>
 	<!-- end Causes Area -->
 
-	<!-- Start Collection Area -->
-	<section class="collection-area section-gap">
-		<div class="container">
-			<div class="row justify-content-center align-items-center">
-				<div class="col-lg-4 col-md-8">
-					<div class="text">
-						<h2>Experience
-							How your Donation
-							Reach Over Years</h2>
-						<p>
-							The French Revolution constituted for the conscience of the dominant aristocratic class a
-							fall from innocence,
-							and upturning of the natural.
-						</p>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-4 col-sm-6 col-6">
-					<div class="collection-box">
-						<p><small>USD</small></p>
-						<h3 class="color1"><span class="counter">21</span> M</h3>
-						<i class="lnr lnr-arrow-up"></i>
-						<p>2015</p>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-4 col-sm-6 col-6">
-					<div class="collection-box">
-						<p><small>USD</small></p>
-						<h3><span class="counter">15</span> M</h3>
-						<i class="lnr lnr-arrow-up"></i>
-						<p>2016</p>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-4 col-sm-6 col-6">
-					<div class="collection-box">
-						<p><small>USD</small></p>
-						<h3 class="color3"><span class="counter">23</span> M</h3>
-						<i class="lnr lnr-arrow-up"></i>
-						<p>2017</p>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-4 col-sm-6 col-6">
-					<div class="collection-box">
-						<p><small>USD</small></p>
-						<h3 class="color4"><span class="counter">25</span> M</h3>
-						<i class="lnr lnr-arrow-up"></i>
-						<p>2018</p>
-					</div>
+	<!--Gallery-->
+	<section class="home-banner-area relative">
+		<div class="container-fluid">
+			<div class="row  d-flex align-items-center justify-content-center">
+				<div class="header-left col-lg-5 col-md-6 ">
+					<h1>
+						Gallery
+					</h1>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Collection Area -->
 
-	<!-- Start Condition Area -->
-	<section class="condition-area section-gap">
-		<div class="container">
-			<div class="row align-items-center justify-content-center">
-				<div class="col-lg-6 col-md-8 col-sm-10">
-					<div class="condition-left owl-carousel owl-condition">
-						<img class="img-fluid" src="img/condition/c1.jpg" alt="">
-						<img class="img-fluid" src="img/condition/c1.jpg" alt="">
-					</div>
-				</div>
-				<div class="offset-lg-1 col-lg-5">
-					<div class="condition-right">
-						<h2>
-							New way <br>
-							to give back
-						</h2>
-						<p>
-							If you are looking at blank cassettes on the web, you may be very confused at the difference
-							in price You may
-							see some for as low as each. If you are looking at blank cassettes on the web, you may be
-							very confused at the
-							difference in price You may see.
-						</p>
-						<ul>
-							<li>If you are looking at blank cassettes on the web.</li>
-							<li>Difference in price You may see some as low as each.</li>
-							<li>May be very confused at the difference in price.</li>
-							<li>If you are looking at blank cassettes on the web.</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Condition Area -->
+	<div class="gallery">
+		<figure>
+			<img src="img/childrensHome/home1.jpg" alt="" />
+			<figcaption>Daytona Beach <small>United States</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/childrensHome/home2.jpg" alt="" />
+			<figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/childrensHome/home3.jpg" alt="" />
+			<figcaption>
+				Bad Pyrmont <small>Deutschland</small>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="img/foodProg/food1.jpg" alt="" />
+			<figcaption>Yellowstone National Park <small>United States</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/foodProg/food2.jpg" alt="" />
+			<figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/foodProg/food3.jpg" alt="" />
+			<figcaption>Highlands <small>United States</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/foodProg/food4.jpg" alt="" />
+			<figcaption>Daytona Beach <small>United States</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/foodProg/food5.jpg" alt="" />
+			<figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/home/home2.jpg" alt="" />
+			<figcaption>
+				Bad Pyrmont <small>Deutschland</small>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="img/foodProg/food7.jpg" alt="" />
+			<figcaption>Yellowstone National Park <small>United States</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/foodProg/food8.jpg" alt="" />
+			<figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
+		</figure>
+		<figure>
+			<img src="img/home/home1.jpg" alt="" />
+			<figcaption>Highlands <small>United States</small></figcaption>
+		</figure>
+	</div>
 
-	<!-- Start Donation Area -->
-	<section class="donation-area relative section-gap-top">
-		<div class="container">
-			<div class="row d-flex justify-content-center">
-				<div class="col-lg-5">
-					<div class="text-center text-wrap">
-						<h1 class="mb-25">Donate to help People Around the World</h1>
-						<p>Las Vegas has more than 100,000 hotel rooms to choose from. There is something for every
-							budget, and enough.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Donation Area -->
+	<!--Gallery 2-->
 
-	<!-- Start Donation Form Area -->
-	<section class="donation-form-area section-gap-bottom">
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-lg-6 col-md-10 col-sm-12">
-					<div class="donation-box">
-						<form action="">
-							<div class="donation-input">
-								<div class="form-group">
-									<input type="text" placeholder="$20.00" onfocus="this.placeholder = ''"
-										onblur="this.placeholder = '$20.00'" class="form-control">
-									<span class="fs-14">USD</span>
-								</div>
-							</div>
-
-							<div class="row">
-								<div class="col-lg-6 col-md-6">
-									<div class="donation-type">
-										<div class="form-check">
-											<label class="form-check-label">
-												<input type="radio" class="form-check-input" name="optradio">
-												One Time
-											</label>
-										</div>
-										<p>Donate your amount for
-											this session only</p>
-									</div>
-								</div>
-
-								<div class="col-lg-6 col-md-6">
-									<div class="donation-type">
-										<div class="form-check">
-											<label class="form-check-label">
-												<input type="radio" class="form-check-input" name="optradio">
-												Ongoing
-											</label>
-										</div>
-										<p>Donate your amount for
-											this session only</p>
-									</div>
-								</div>
-							</div>
-
-							<button type="button" class="primary-btn w-100">Donate Now</button>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- end Donation Form Area -->
-
-	<!-- Start Client Logo Area -->
-	<section class="brand-area section-gap-bottom">
-		<div class="container">
-			<div class="owl-brand owl-carousel">
-				<div class="item">
-					<img src="img/brands/b1.png" alt="">
-				</div>
-				<div class="item">
-					<img src="img/brands/b2.png" alt="">
-				</div>
-				<div class="item">
-					<img src="img/brands/b3.png" alt="">
-				</div>
-				<div class="item">
-					<img src="img/brands/b4.png" alt="">
-				</div>
-				<div class="item">
-					<img src="img/brands/b5.png" alt="">
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Client Logo Area -->
-
-	<!-- Start Event Area -->
-	<section class="event-area section-gap-bottom">
-		<div class="container">
-			<div class="row justify-content-center align-items-center ">
-				<div class="col-lg-5 event-left">
-					<h1>Upcoming Events</h1>
-					<p>
-						If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price You may see
-						some for as low as each.
-					</p>
-					<div class="single-event">
-						<p>12th September, 2018</p>
-						<h4>
-							<a href="event-details.html">Help Restoring Uganda’s Water
-								Pipelines Construction</a>
-						</h4>
-					</div>
-
-					<div class="single-event">
-						<p>12th September, 2018</p>
-						<h4>
-							<a href="event-details.html">Help Restoring Uganda’s Water
-								Pipelines Construction</a>
-						</h4>
-					</div>
-
-					<div class="single-event">
-						<p>12th September, 2018</p>
-						<h4>
-							<a href="event-details.html">Help Restoring Uganda’s Water
-								Pipelines Construction</a>
-						</h4>
-					</div>
-				</div>
-				<div
-					class="offset-lg-1 col-lg-6 col-md-8 col-sm-10 event-right justify-content-center align-items-center d-flex">
-					<div class="owl-carousel owl-event">
-						<img class="img-fluid" src="img/events/e1.jpg" alt="">
-						<img class="img-fluid" src="img/events/e1.jpg" alt="">
-						<img class="img-fluid" src="img/events/e1.jpg" alt="">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Event Area -->
 
 	<!-- start footer Area -->
 	<footer class="footer-area section-gap">
@@ -525,36 +293,10 @@
 							magna aliqua.
 						</p>
 						<p class="footer-text">
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							Copyright &copy;<script>
 								document.write(new Date().getFullYear());
-							</script> All rights reserved | This template is made with <i class="fa fa-heart-o"
-								aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							</script> All rights reserved | Ananda Marga Mission
 						</p>
-					</div>
-				</div>
-				<div class="col-lg-5  col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Newsletter</h6>
-						<p>Stay update with our latest</p>
-						<div class="" id="mc_embed_signup">
-							<form target="_blank" novalidate="true"
-								action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-								method="get" class="form-inline">
-								<input class="form-control" name="EMAIL" placeholder="Enter Email"
-									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-									required="" type="email">
-								<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right"
-										aria-hidden="true"></i></button>
-								<div style="position: absolute; left: -5000px;">
-									<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
-										type="text">
-								</div>
-
-								<div class="info"></div>
-							</form>
-						</div>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
@@ -594,6 +336,7 @@
 	<script src="js/jquery.counterup.min.js"></script>
 	<script src="js/parallax.min.js"></script>
 	<script src="js/mail-script.js"></script>
+	<scrit src="js/gallery.js"></scrit>
 	<script src="js/main.js"></script>
 </body>
 
