--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/anandaFavi.png.png">
 	<!-- Author Meta -->
 	<meta name="author" content="codepixer">
 	<!-- Meta Description -->
@@ -17,7 +17,8 @@
 	<!-- Site Title -->
 	<title>Donation</title>
 
-	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700"
+		rel="stylesheet">
 	<!--
 			CSS
 			============================================= -->
@@ -39,27 +40,21 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 						<li class="menu-active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="causes.html">Causes</a></li>
-						<li><a href="events.html">Events</a></li>
-						<li class="menu-has-children"><a href="">Blog</a>
+						<li class="menu-has-children"><a href="programmes.html">Programmes</a>
 							<ul>
-								<li><a href="blog-home.html">Blog Home</a></li>
-								<li><a href="blog-single.html">Blog Single</a></li>
+								<li><a href="food.html">Food Programme</a></li>
+								<li><a href="childrens.html">Childrens Home</a></li>
+								<li><a href="mission.html">Mission School</a></li>
+								<li><a href="health.html">Health Programme</a></li>
 							</ul>
 						</li>
-						<li class="menu-has-children"><a href="">Pages</a>
-							<ul>
-								<li><a href="donation.html">Donation</a></li>
-								<li><a href="event-details.html">Event Details</a></li>
-								<li><a href="elements.html">Elements</a></li>
-							</ul>
-						</li>
+						<li class="menu"><a href="donation.html">Donation</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav><!-- #nav-menu-container -->
@@ -73,24 +68,14 @@
 		<div class="container-fluid">
 			<div class="row  d-flex align-items-center justify-content-center">
 				<div class="header-left col-lg-5 col-md-6 ">
-					<h6 class="text-white ">the Royal Essence of Journey</h6>
 					<h2>Contact</h2>
 					<p class="pt-10 pb-20">
-						If you are looking at blank cassettes on the web, you may be very confused at the.
+						Send us a message.
 					</p>
 				</div>
 				<div class="col-lg-7 col-md-6 col-sm-8 header-right">
 					<div class="">
-						<img class="img-fluid w-100" src="img/banner-img.jpg" alt="">
-					</div>
-					<div class="form-wrap about-content">
-						<p class="text-white m-0">
-							<span class="box">
-								<a href="index.html">Home </a>
-								<span class="lnr lnr-arrow-right"></span>
-								<a href="contact.html">Contact</a>
-							</span>
-						</p>
+						<img class="img-fluid w-100" src="img/home/home1.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -109,8 +94,8 @@
 							<span class="lnr lnr-home"></span>
 						</div>
 						<div class="contact-details">
-							<h5>Dhaka, Bangladesh</h5>
-							<p>56/8, West Panthapath</p>
+							<h5>Ananda Marga Mission in Kenya</h5>
+							<p>Plot No 209, Mountain View Estate, Waiyaki Way</p>
 						</div>
 					</div>
 					<div class="single-contact-address d-flex flex-row">
@@ -118,8 +103,7 @@
 							<span class="lnr lnr-phone-handset"></span>
 						</div>
 						<div class="contact-details">
-							<h5>00 (880) 9865 562</h5>
-							<p>Mon to Fri 9am to 6 pm</p>
+							<h5>+254724537444</h5>
 						</div>
 					</div>
 					<div class="single-contact-address d-flex flex-row">
@@ -127,29 +111,34 @@
 							<span class="lnr lnr-envelope"></span>
 						</div>
 						<div class="contact-details">
-							<h5>support@codethemes.com</h5>
+							<h5> ssnairobi74@gmail.com</h5>
 							<p>Send us your query anytime!</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-8">
-					<form class="form-area " id="myForm" action="mail.php" method="post" class="contact-form text-right">
+					<form class="form-area " id="myForm" action="mail.php" method="post"
+						class="contact-form text-right">
 						<div class="row">
 							<div class="col-lg-6 form-group">
-								<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'"
-								 class="common-input mb-20 form-control" required="" type="text">
+								<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''"
+									onblur="this.placeholder = 'Enter your name'"
+									class="common-input mb-20 form-control" required="" type="text">
 
-								<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
-								 onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control"
-								 required="" type="email">
+								<input name="email" placeholder="Enter email address"
+									pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
+									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'"
+									class="common-input mb-20 form-control" required="" type="email">
 
-								<input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your subject'"
-								 class="common-input mb-20 form-control" required="" type="text">
+								<input name="subject" placeholder="Enter your subject" onfocus="this.placeholder = ''"
+									onblur="this.placeholder = 'Enter your subject'"
+									class="common-input mb-20 form-control" required="" type="text">
 								<div class="mt-20 alert-msg" style="text-align: left;"></div>
 							</div>
 							<div class="col-lg-6 form-group">
-								<textarea class="common-textarea form-control" name="message" placeholder="Messege" onfocus="this.placeholder = ''"
-								 onblur="this.placeholder = 'Messege'" required=""></textarea>
+								<textarea class="common-textarea form-control" name="message" placeholder="Messege"
+									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'"
+									required=""></textarea>
 								<button class="primary-btn mt-20 text-white" style="float: right;">Send Message</button>
 
 							</div>
@@ -162,50 +151,16 @@
 	<!-- End contact-page Area -->
 
 	<!-- start footer Area -->
-	<footer class="footer-area section-gap">
+	<footer class="footer-area">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-5 col-md-6 col-sm-6">
+				<div>
 					<div class="single-footer-widget">
-						<h6>About Us</h6>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore
-							magna aliqua.
+						<p class="footer-text">
+							Copyright &copy;<script>
+								document.write(new Date().getFullYear());
+							</script> All rights reserved | Ananda Marga Mission
 						</p>
-						<p class="footer-text"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-					</div>
-				</div>
-				<div class="col-lg-5  col-md-6 col-sm-6">
-					<div class="single-footer-widget">
-						<h6>Newsletter</h6>
-						<p>Stay update with our latest</p>
-						<div class="" id="mc_embed_signup">
-							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-							 method="get" class="form-inline">
-								<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '"
-								 required="" type="email">
-								<button class="click-btn btn btn-default"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
-								<div style="position: absolute; left: -5000px;">
-									<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-								</div>
-
-								<div class="info"></div>
-							</form>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-					<div class="single-footer-widget">
-						<h6>Follow Us</h6>
-						<p>Let us be social</p>
-						<div class="footer-social d-flex align-items-center">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -214,10 +169,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- End footer Area -->
 
 	<script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-	 crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+	</script>
 	<script src="js/vendor/bootstrap.min.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+	<script type="text/javascript"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="js/easing.min.js"></script>
 	<script src="js/hoverIntent.js"></script>
