--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Favicon-->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/anandaFavi.png.png">
 	<!-- Author Meta -->
 	<meta name="author" content="codepixer">
 	<!-- Meta Description -->
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Cause Charity</title>
+	<title>Amanda Marga Mission </title>
 
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700"
 		rel="stylesheet">
@@ -41,27 +41,21 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 						<li class="menu-active"><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="causes.html">Causes</a></li>
-						<li><a href="events.html">Events</a></li>
-						<li class="menu-has-children"><a href="">Blog</a>
+						<li class="menu-has-children"><a href="programmes.html">Programmes</a>
 							<ul>
-								<li><a href="blog-home.html">Blog Home</a></li>
-								<li><a href="blog-single.html">Blog Single</a></li>
+								<li><a href="food.html">Food Programme</a></li>
+								<li><a href="childrens.html">Childrens Home</a></li>
+								<li><a href="mission.html">Mission School</a></li>
+								<li><a href="health.html">Health Programme</a></li>
 							</ul>
 						</li>
-						<li class="menu-has-children"><a href="">Pages</a>
-							<ul>
-								<li><a href="donation.html">Donation</a></li>
-								<li><a href="event-details.html">Event Details</a></li>
-								<li><a href="elements.html">Elements</a></li>
-							</ul>
-						</li>
+						<li class="menu"><a href="donation.html">Donation</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav><!-- #nav-menu-container -->
@@ -80,16 +74,17 @@
 						to give back
 					</h1>
 					<p class="pt-20 pb-20">
-						If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price You may see
-						some for as low as each.
+						Ananda Marga Mission in Kenya is a charitable organization ,dedicated to serving the less
+						fortunate in the society
+						through various programmes search as, food distribution, childrens home, Mission Schools, and
+						health programmes.
 					</p>
 					<div class="vdo-section">
-						<a href="https://www.youtube.com/watch?v=p29dKpHnPjQ" class="single-charity">
-							<img src="img/video-icon.png" alt="">
+						<a href="https://www.youtube.com/watch?v=W0rafaQeZ3A" class="single-charity">
+							<img src="img/play.png" alt="">
 						</a>
 						<span>
-							<a href="https://www.youtube.com/watch?v=p29dKpHnPjQ" class="single-charity">
+							<a href="https://www.youtube.com/watch?v=W0rafaQeZ3A" class="single-charity">
 								Watch our intro video
 							</a>
 						</span>
@@ -113,12 +108,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-7 section-title">
-					<h2>Our Major Causes</h2>
-					<p>
-						The French Revolution constituted for the conscience of the dominant aristocratic class a fall
-						from innocence the
-						natural chain of events.
-					</p>
+					<h2>Our Major Programmes</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -128,17 +118,18 @@
 							<div class="thumb">
 								<img class="c-img img-fluid" src="img/foodProg/food1.jpg" alt="">
 							</div>
-							<a href="#">
+							<a href="food.html">
 								<h3>Food Programme</h3>
 							</a>
 							<p class="text">
-								Ananda Marga Mission distributes food each week to vulnerable
-								members of the community. It also involves feeding thousands of children each week.
+								Food distribution to vulnerable members of the community, including thousands of
+								children.
+
 							</p>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-							<a href="#" class="primary-btn offwhite">View Details</a>
-							<a href="#" class="primary-btn primary-btn1">Donate Here</a>
+							<a href="food.html" class="primary-btn offwhite">View Details</a>
+							<a href="donation.html" class="primary-btn primary-btn1">Donate Here</a>
 						</div>
 					</div>
 				</div>
@@ -149,16 +140,16 @@
 							<div class="thumb">
 								<img class="c-img img-fluid" src="img/childrensHome/home3.jpg" alt="">
 							</div>
-							<a href="#">
+							<a href="childrens.html">
 								<h3>Childrens Home</h3>
 							</a>
 							<p class="text">
-								Ananda Marga Mission provides homes for homeless children both in Mombasa and Nairobi.
+								Amand Mission provides homes for homeless children both in Mombasa and Nairobi.
 							</p>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-							<a href="#" class="primary-btn offwhite">View Details</a>
-							<a href="#" class="primary-btn">Donate Here</a>
+							<a href="childrens.html" class="primary-btn offwhite">View Details</a>
+							<a href="donation.html" class="primary-btn">Donate Here</a>
 						</div>
 					</div>
 				</div>
@@ -169,18 +160,17 @@
 							<div class="thumb">
 								<img class="c-img img-fluid" src="img/missionSchool/home3.jpg" alt="">
 							</div>
-							<a href="#">
+							<a href="mission.html">
 								<h3>Mission School</h3>
 							</a>
 							<p class="text">
-								Ananda Marga Mission provides free education to thousands of students across the
-								country. The students also get to enjoy free food. The
-								Mission also provides schools for those living with disabilities.
+								Free education to disadvantaged children and people living with disabilities across the
+								country.
 							</p>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-							<a href="#" class="primary-btn offwhite">View Details</a>
-							<a href="#" class="primary-btn primary-btn3">Donate Here</a>
+							<a href="mission.html" class="primary-btn offwhite">View Details</a>
+							<a href="donation.html" class="primary-btn primary-btn3">Donate Here</a>
 						</div>
 					</div>
 				</div>
@@ -191,16 +181,16 @@
 							<div class="thumb">
 								<img class="c-img img-fluid" src="img/home/home1.jpg" alt="">
 							</div>
-							<a href="#">
+							<a href="health.html">
 								<h3>Health Programme</h3>
 							</a>
 							<p class="text">
-								The Mission has a health center to care for children living ith HIV/AIDS.
+								Health Care for the vulnerable including children living with HIV/AIDs.
 							</p>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-							<a href="#" class="primary-btn offwhite">View Details</a>
-							<a href="#" class="primary-btn primary-btn3">Donate Here</a>
+							<a href="health.html" class="primary-btn offwhite">View Details</a>
+							<a href="donation.html" class="primary-btn primary-btn3">Donate Here</a>
 						</div>
 					</div>
 				</div>
@@ -281,34 +271,16 @@
 
 
 	<!-- start footer Area -->
-	<footer class="footer-area section-gap">
+	<footer class="footer-area">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-5 col-md-6 col-sm-6">
+				<div>
 					<div class="single-footer-widget">
-						<h6>About Us</h6>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-							ut labore dolore
-							magna aliqua.
-						</p>
 						<p class="footer-text">
 							Copyright &copy;<script>
 								document.write(new Date().getFullYear());
 							</script> All rights reserved | Ananda Marga Mission
 						</p>
-					</div>
-				</div>
-				<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
-					<div class="single-footer-widget">
-						<h6>Follow Us</h6>
-						<p>Let us be social</p>
-						<div class="footer-social d-flex align-items-center">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
 					</div>
 				</div>
 			</div>
