--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/Ananda.svg" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -146,8 +146,8 @@
 							The Mission Provides homes for homeless children.
 						</p>
 						<ul>
-							<li>Amanda Marga Mission Childrens Home in Mombasa: 24 children</li>
-							<li>Amanda Marga Mission Childrens Home in Nairobi: 20 children</li>
+							<li>Ananda Marga Mission Childrens Home in Mombasa: 24 children</li>
+							<li>Ananda Marga Mission Childrens Home in Nairobi: 20 children</li>
 						</ul>
 					</div>
 				</div>
@@ -176,7 +176,7 @@
 							School
 						</h2>
 						<p>
-							Under this programme, Amanda Marga Mission provides free access to education to thousands of
+							Under this programme, Ananda Marga Mission provides free access to education to thousands of
 							young children all over the country. The students also get to enjoy free food provided by
 							the Mission.
 							This programme also involves provision of education of people living with disabilities.
