--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Donation</title>
+	<title>Contact</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700"
 		rel="stylesheet">
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/Ananda.svg" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -63,31 +63,10 @@
 	</header>
 	<!-- Start Header Area -->
 
-	<!-- start Banner Area -->
-	<section class="home-banner-area relative banner-area">
-		<div class="container-fluid">
-			<div class="row  d-flex align-items-center justify-content-center">
-				<div class="header-left col-lg-5 col-md-6 ">
-					<h2>Contact</h2>
-					<p class="pt-10 pb-20">
-						Send us a message.
-					</p>
-				</div>
-				<div class="col-lg-7 col-md-6 col-sm-8 header-right">
-					<div class="">
-						<img class="img-fluid w-100" src="img/home/home1.jpg" alt="">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Banner Area -->
-
 	<!-- Start contact-page Area -->
 	<section class="contact-page-area section-gap">
 		<div class="container">
 			<div class="row">
-				<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
 				<div class="col-lg-4 d-flex flex-column address-wrap">
 					<div class="single-contact-address d-flex flex-row">
 						<div class="icon">
@@ -145,6 +124,7 @@
 						</div>
 					</form>
 				</div>
+				<div class="map-wrap" style="width:100%; height: 445px;" id="map"></div>
 			</div>
 		</div>
 	</section>
