--- a/health.html
+++ b/health.html
@@ -15,7 +15,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Blog details</title>
+    <title>Health</title>
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700"
         rel="stylesheet">
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
-                    <a href="index.html"><img src="img/Ananda.svg" alt="" title="" /></a>
+                    <a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
