--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Amanda Marga Mission </title>
+	<title>Ananda Marga Mission </title>
 
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700"
 		rel="stylesheet">
@@ -41,7 +41,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/Ananda.svg" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda5.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -108,7 +108,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-7 section-title">
-					<h2>Our Major Programmes</h2>
+					<h2>Programmes</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -144,7 +144,7 @@
 								<h3>Childrens Home</h3>
 							</a>
 							<p class="text">
-								Amand Mission provides homes for homeless children both in Mombasa and Nairobi.
+								Ananda Mission provides homes for homeless children both in Mombasa and Nairobi.
 							</p>
 						</div>
 						<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
