--- a/donation.html
+++ b/donation.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/Ananda8.svg" alt="" title="" /></a>
+					<a href="index.html"><img src="img/Ananda9.svg" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
@@ -104,13 +104,13 @@
 				<div class="col-lg-6 col-md-10 col-sm-12">
 					<div class="donation-box">
 						<form action="">
-							<!-- <div class="donation-input">
+							<div class="donation-input">
 								<div class="form-group">
 									<input type="text" placeholder="KSH 200" onfocus="this.placeholder = ''"
 										onblur="this.placeholder = 'KES 2000'" class="form-control">
 									<span class="fs-14">KES</span>
 								</div>
-							</div> -->
+							</div>
 
 							<div class="row">
 								<!-- <div class="col-lg-6 col-md-6">
